<resources>

    <string name="app_name">Coffee Corner</string>
    <string name="toppings">Toppings</string>
    <string name="whipping_cream_btn">Whipping Cream</string>
    <string name="chocolate_btn">Chocolate</string>

    <string name="quantity">Quantity</string>
    <string name="less_btn">-</string>
    <string name="current_amount">Q</string>
    <string name="more_btn">+</string>

    <string name="order_btn">Order</string>

    <string name="order_summary">Order Summary</string>
    <string name="order_wc">Whipping Cream: False</string>
    <string name="order_c">Chocolate: False</string>
    <string name="quantity_num">Quantity: Num</string>
    <string name="total_Num">Total: Num</string>
    <string name="thx">Tankyou!</string>

</resources>
