<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff9f51">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toppings"
        android:id="@+id/textView1"
        android:textSize="100sp"
        android:layout_gravity="center_horizontal" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipping_cream_btn"
        android:id="@+id/checkBox1"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:textSize="50sp"
        android:onClick="toggleWhippingCream" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_btn"
        android:id="@+id/checkBox2"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:textSize="50sp"
        android:onClick="toggleChocolate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quantity"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="80sp"
        android:singleLine="false"
        android:layout_marginTop="25sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/less_btn"
            android:id="@+id/button1"
            android:textSize="100sp"
            android:background="#adadad"
            android:layout_gravity="top|center_vertical"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="10dp"
            android:onClick="decreaseQuantity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/current_amount"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical"
            android:textSize="100sp"
            android:layout_marginLeft="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_btn"
            android:id="@+id/button2"
            android:textSize="100sp"
            android:background="#adadad"
            android:layout_gravity="bottom|center_vertical"
            android:layout_marginLeft="20sp"
            android:onClick="increaseQuantity" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_btn"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:textSize="60sp"
        android:background="#919191"
        android:layout_margin="10sp"
        android:onClick="completeOrder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/order_summary"
        android:id="@+id/textView4"
        android:textSize="50sp"
        android:layout_gravity="left"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="3sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/order_wc"
        android:id="@+id/textView5"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/order_c"
        android:id="@+id/textView6"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quantity_num"
        android:id="@+id/textView7"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_Num"
        android:id="@+id/textView8"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/thx"
        android:id="@+id/textView9"
        android:textSize="30sp" />

</LinearLayout>
